--- a/language/EN.json
+++ b/language/EN.json
@@ -191,9 +191,9 @@
             "DOWNLOADING_SONG": "```🔄 Downloading your song...```",
             "UPLOADING_SONG": "```🔂 Uploading your song...```",
             "VIDEO_DESC": "Downloading videos from YouTube",
-            "NEED_VIDEO": "*Please write a video link!*\n*Example:* .video https://www.youtube.com/watch?v=cXcQMXC66c4",
-            "DOWNLOADING_VIDEO": "```🔄 Downloading your video...```",
-            "UPLOADING_VIDEO": "```⬆️ Uploading your video...```",
+            "NEED_VIDEO": "*Please write a video link!*\n*Example:* .video https://www.youtube.com/watch?v=CCtQmMLELvE",
+            "DOWNLOADING_VIDEO": "```🔄 ana kantelecharji lik lien daba...```",
+            "UPLOADING_VIDEO": "```⬆️ ana kansifto lik daba...```",
             "YT_DESC": "Searchng videos on YouTube.",
             "NEED_WORDS": "```Need words to search!```",
             "GETTING_VIDEOS": "```🔎 Please wait, the video is being searched...```",
